Row render fix and temporary select2 z-index fix

--- a/Js/Backend/Assets/styles/sass/components/select2.scss
+++ b/Js/Backend/Assets/styles/sass/components/select2.scss
@@ -6,7 +6,7 @@
   position: relative;
   vertical-align: middle;
   width: 100% !important;
-  z-index: 3000;
+  z-index: 30000;
 
   &:after {
     position: absolute;
